[package]
name = "sus"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[lib]
name = "game"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
bincode = "1.3"
futures = "0.3.7"
laminar = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
wgpu = "0.6.0"
winit = "0.23.0"

[build-dependencies]
shaderc = { version = "0.6", features = ["build-from-source"]}
