[package]
name = "sus"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[lib]
name = "game"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
bincode = "1"
bytemuck = { version = "1", features = ["derive"] }
fontdue = { version = "0.4", git = "https://github.com/mooman219/fontdue", rev = "c71fb9d7649ce7738a178d162ab9eec57babf2ce" }
futures = "0.3"
laminar = "0.4"
rect_packer = "0.2"
serde = { version = "1", features = ["derive"] }
wgpu = "0.6"
winit = "0.23"

[build-dependencies]
shaderc = { version = "0.6", features = ["build-from-source"]}
