[package]
name = "sus-client"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
laminar = "0.4"
sus-common = { path = "../common" }
simple-game = { git = "https://github.com/bschwind/simple-game", branch = "master", features = ["bevy"] }
