[package]
name = "sus-common"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.5"
laminar = "0.5"
serde = { version = "1", features = ["derive"] }
simple-game = { git = "https://github.com/bschwind/simple-game", branch = "master", features = ["bevy"] }
